--- a/typed-lua.cabal
+++ b/typed-lua.cabal
@@ -13,14 +13,23 @@ executable typed-lua
     other-modules:      
         Source,
         Syntax,
-        Parser 
+        Parser
     build-depends:      
         base ^>=4.14.3.0,
         text ^>=1.2,
-        megaparsec ^>=9.2.1
+        megaparsec ^>=9.2.1,
+        mtl ^>=2.2,
+        containers ^>=0.6,
+        free ^>=5.1,
+        deriving-compat ^>=0.6,
+        parser-combinators ^>=1.3,
+        composition ^>=1.0
     hs-source-dirs:     app
     default-language:   Haskell2010
     default-extensions:
-        RecordWildCards,
-        OverloadedStrings
+        StandaloneDeriving,
+        DeriveFunctor,
+        TemplateHaskell,
+        OverloadedStrings,
+        RecordWildCards
     ghc-options: -Wall
